--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "heroku-ssl-redirect": "^0.1.1",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "serve-static": "^1.14.1",
     "socket.io": "^2.4.1"
